added treasure hunt

--- a/index.html
+++ b/index.html
@@ -190,6 +190,22 @@
 								</div>
 							</div>
 							<pre>
+
+							</pre>
+							<div class="row">
+								<div class="col-md-6">
+									<div class="mu-about-left">
+										<img class="image-size" src="assets/images/hunt.png" alt="Men Speaker">
+									</div>
+								</div>
+								<div class="col-md-6">
+									<div class="mu-about-right">
+										<h2>Treasure Hunt</h2>
+										<a class ="mu-primary-btn" href="https://forms.gle/BYhwfEdSSUySudk78">Click Here to Register.</a>
+									</div>
+								</div>
+							</div>
+							<pre>
 								
 							</pre>
 							
