added more details

--- a/index.html
+++ b/index.html
@@ -28,18 +28,10 @@
 	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
  
  
-	
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+
   </head>
   <body>
-  	
-  	<!-- Start Header -->
-		<!-- End menu -->
+
 
 		<div class="mu-hero-overlay">
 			<div class="container">
@@ -89,6 +81,8 @@
 								<div class="col-md-6">
 									<div class="mu-about-right">
 										<h2>Counter Strike: Source</h2>
+										<p>Team of 4 Members.</p>
+										<p>Entry Fee: 200/- per team.</p>
 										<a class ="mu-primary-btn" href="https://forms.gle/Bx9yLgniuAsBdVTW9">Click Here to Register.</a>
 									</div>
 								</div>
@@ -105,6 +99,8 @@
 								<div class="col-md-6">
 									<div class="mu-about-right">
 										<h2>Battleground Mobile India</h2>
+										<p>Team of 4 Members.</p>
+										<p>Entry fee: 200/- per team.</p>
 										<a class ="mu-primary-btn" href="https://forms.gle/9SGvWuj4fHat5TWz9">Click Here to Register.</a>
 									</div>
 								</div>
@@ -121,6 +117,7 @@
 								<div class="col-md-6">
 									<div class="mu-about-right">
 										<h2>Need For Speed: Most Wanted (2005)</h2>
+										<p>Entry Fee: 50/- per head.</p>
 										<a class ="mu-primary-btn" href="https://forms.gle/TWuAXeNPM2DHhB5e6">Click Here to Register.</a>
 									</div>
 								</div>
@@ -137,6 +134,8 @@
 								<div class="col-md-6">
 									<div class="mu-about-right">
 										<h2>Code War & Puzzle</h2>
+										<p>Team of 2 Members.</p>
+										<p>Entry fee: 200/- per team.</p>
 										<a class ="mu-primary-btn" href="https://docs.google.com/forms/d/e/1FAIpQLSeGszPhoaP514wh9slhh2qcIGyHFNVyWTA6d3e5Z3J9fhSFlQ/viewform">Click Here to Register.</a>
 									</div>
 								</div>
@@ -153,6 +152,8 @@
 								<div class="col-md-6">
 									<div class="mu-about-right">
 										<h2>Squid Game</h2>
+										<p>Single Player game.</p>
+										<p>Entry fee: 100/- per team.</p>
 										<a class ="mu-primary-btn" href="https://forms.gle/bbhAYbtW12ryDaxk8">Click Here to Register.</a>
 									</div>
 								</div>
@@ -169,6 +170,7 @@
 								<div class="col-md-6">
 									<div class="mu-about-right">
 										<h2>Unplugged</h2>
+										<p>Entry fee: 100/- per head.</p>
 										<a class ="mu-primary-btn" href="https://docs.google.com/forms/d/e/1FAIpQLSfpcKQb3AOawG1mu3qExbsixhb8TJzSv_ELK-EUvSRA5lovqg/viewform">Click Here to Register.</a>
 									</div>
 								</div>
@@ -185,6 +187,7 @@
 								<div class="col-md-6">
 									<div class="mu-about-right">
 										<h2>Crazy Technical Hunt</h2>
+										<p>Entry fee: 100/-</p>
 										<a class ="mu-primary-btn" href="https://docs.google.com/forms/d/e/1FAIpQLScg-9QhPH4YrJiZLKa0L4aNHEGI5zBIEaATDLzLtW42Px6cEQ/viewform">Click Here to Register.</a>
 									</div>
 								</div>
@@ -201,6 +204,7 @@
 								<div class="col-md-6">
 									<div class="mu-about-right">
 										<h2>Treasure Hunt</h2>
+										<p>Entry Fee: 200/- per team.</p>
 										<a class ="mu-primary-btn" href="https://forms.gle/BYhwfEdSSUySudk78">Click Here to Register.</a>
 									</div>
 								</div>
