made it more snapy

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Event Registration</title>
     <!-- Favicon -->
     <link rel="shortcut icon" type="image/icon" href="assets/images/favicon.ico"/>
@@ -31,18 +30,15 @@
 
   </head>
   <body>
-
-
 		<div class="mu-hero-overlay">
 			<div class="container">
 				<div class="mu-hero-area">
 						<div class="mu-hero-featured-content">
 							<h1 class="clg-name">Samveekshana 2K22</h1>
-							<h2>SG Balekundri Institute of Technology, Belgaum</h2>
-							<h2><strong>Venue:</strong></h2>
+							<h2><strong>SG Balekundri Institute of Technology, Belgaum</strong></h2>
 							<p>Shivabasava Nagar, Belagavi-590010, Karnataka</p>
 
-							<p class="mu-event-date-line">10th & 11th of June 2K22</p>
+							<p class="mu-event-date-line">10th & 11th of June 2022</p>
 
 							<div class="mu-event-counter-area">
 								<div id="mu-event-counter">
@@ -52,8 +48,6 @@
 
 						</div>
 					</div>
-					<!-- End hero featured area -->
-
 				</div>
 			</div>
 		</div>
@@ -62,20 +56,14 @@
 	
 	<!-- Start main content -->
 	<main role="main">
-		<!-- Start About -->
-		<section id="mu-about">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-12">
-						<div class="mu-about-area">
-							<!-- Start Feature Content -->
+<!--Events-->
 							<pre>
 
 							</pre>
 							<div class="row">
 								<div class="col-md-6">
 									<div class="mu-about-left">
-										<img class="" src="assets/images/cs.png" alt="Men Speaker">
+										<img class="" src="assets/images/cs.png" alt="counter-strike">
 									</div>
 								</div>
 								<div class="col-md-6">
@@ -93,7 +81,7 @@
 							<div class="row">
 								<div class="col-md-6">
 									<div class="mu-about-left">
-										<img class="" src="assets/images/bgmi.png" alt="Men Speaker">
+										<img class="" src="assets/images/bgmi.png" alt="bgmi">
 									</div>
 								</div>
 								<div class="col-md-6">
@@ -111,7 +99,7 @@
 							<div class="row">
 								<div class="col-md-6">
 									<div class="mu-about-left">
-										<img class="" src="assets/images/nfs.png" alt="Men Speaker">
+										<img class="" src="assets/images/nfs.png" alt="nfs">
 									</div>
 								</div>
 								<div class="col-md-6">
@@ -128,7 +116,7 @@
 							<div class="row">
 								<div class="col-md-6">
 									<div class="mu-about-left">
-										<img class="image-size" src="assets/images/code.png" alt="Men Speaker">
+										<img class="image-size" src="assets/images/code.png" alt="code-war">
 									</div>
 								</div>
 								<div class="col-md-6">
@@ -146,7 +134,7 @@
 							<div class="row">
 								<div class="col-md-6">
 									<div class="mu-about-left">
-										<img class="image-size" src="assets/images/squid.jpg" alt="Men Speaker">
+										<img class="image-size" src="assets/images/squid.jpg" alt="squid-game">
 									</div>
 								</div>
 								<div class="col-md-6">
@@ -164,7 +152,7 @@
 							<div class="row">
 								<div class="col-md-6">
 									<div class="mu-about-left">
-										<img class="image-size" src="assets/images/unplugged.png" alt="Men Speaker">
+										<img class="image-size" src="assets/images/unplugged.png" alt="unpluuged">
 									</div>
 								</div>
 								<div class="col-md-6">
@@ -181,7 +169,7 @@
 							<div class="row">
 								<div class="col-md-6">
 									<div class="mu-about-left">
-										<img class="image-size" src="assets/images/tech.png" alt="Men Speaker">
+										<img class="image-size" src="assets/images/tech.png" alt="technical-hunt">
 									</div>
 								</div>
 								<div class="col-md-6">
@@ -198,7 +186,7 @@
 							<div class="row">
 								<div class="col-md-6">
 									<div class="mu-about-left">
-										<img class="image-size" src="assets/images/hunt.png" alt="Men Speaker">
+										<img class="image-size" src="assets/images/hunt.png" alt="treasure-hunt">
 									</div>
 								</div>
 								<div class="col-md-6">
@@ -221,30 +209,11 @@
 			</div>
 		</section>
 		<!-- End About -->
-
-
-
-	
-	
-    <!-- jQuery library -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <!-- Bootstrap -->
-    <script src="assets/js/bootstrap.min.js"></script>
-	<!-- Slick slider -->
-    <script type="text/javascript" src="assets/js/slick.min.js"></script>
-    <!-- Event Counter -->
-    <script type="text/javascript" src="assets/js/jquery.countdown.min.js"></script>
-    <!-- Ajax contact form  -->
-    <script type="text/javascript" src="assets/js/app.js"></script>
-  
-       
-	
-    <!-- Custom js -->
-	<script type="text/javascript" src="assets/js/custom.js"></script>
-
-	
-	
-    
+		<!-- Footer -->
+		<footer>
+			<div>
+				<p>&copy 2022 Design: <a class="footer-link" href="https://azim-at.github.io/Azim-Talikoti/"><strong>Azim Talikoti</strong></a></p>
+			</div>
+		</footer>   
   </body>
 </html>
